[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
bytes = "1"
warp = "0.3"
anyhow = "1.0"
itertools = "0.10.5"
futures = "0.3"
rand = "0.8.5"
