[package]
name = "zombie_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0"
syn = "1.0.109"
zombie_core = { path = "../zombie_core" }
